[package]
name = "ai-usage"
version = "26.7.100"
edition = "2024"
description = "Unified Claude + Codex usage limits (5-hour / weekly) across Chrome profiles"
license = "GPL-3.0"

[dependencies]
# 暗号: RustCrypto — AES-128-CBC + PBKDF2-HMAC-SHA1(Chrome macOS "v10" Cookie 方式)
aes = "0.9.1"
cbc = { version = "0.2.1", features = ["alloc", "block-padding"] }
pbkdf2 = "0.13.0"
sha1 = "0.11.0"

# 保存 / エンコード
rusqlite = { version = "0.40.1", features = ["bundled"] }
base64 = "0.22.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Chrome TLS/HTTP2 エミュレーション付き HTTP(replay した cf_clearance で Cloudflare を通す)
wreq = { version = "5.3.0", features = ["gzip", "brotli", "zstd", "deflate"] }
wreq-util = "2.2.6"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }

# CLI / 出力
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
chrono = "0.4.45"
dirs = "6"
anyhow = "1.0.103"
toml = "1.1.2"

[profile.release]
strip = true
lto = true
